--- a/CheKhabar/MainPage.xaml
+++ b/CheKhabar/MainPage.xaml
@@ -5,6 +5,11 @@
     
     <StackLayout VerticalOptions="Center"
                  Margin="20">
+        <Image x:Name="iconImage"
+               Aspect="AspectFit"
+               HeightRequest="50"
+               HorizontalOptions="FillAndExpand"
+               Margin="0,0,0,50"/>
         <Entry x:Name="emailEntry" 
                Placeholder="Email address"
                TextColor="{StaticResource blueColor}"
@@ -18,5 +23,9 @@
                 Text="Log in" 
                 Clicked="LoginButton_Clicked"
                 Style="{StaticResource normalButton}"/>
+        <Button x:Name="registerUserButton" 
+                Text="Register" 
+                HorizontalOptions="End"
+                Clicked="registerUserButton_Clicked"/>
     </StackLayout>
 </ContentPage>
