--- a/CheKhabar/NewTravelPage.xaml
+++ b/CheKhabar/NewTravelPage.xaml
@@ -5,13 +5,43 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Save"
+                     IconImageSource="save.png"
                      Clicked="ToolbarItem_Clicked"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
             <Entry x:Name="experienceEntry" 
-                   Placeholder="Write your experience"
-                   />
+                   Placeholder="Write your experience"/>
+
+            <ListView x:Name="venueListView"
+                      Margin="20,0"
+                      HorizontalOptions="FillAndExpand">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <Label Text="{Binding name}"
+                                       FontAttributes="Bold"/>
+                                <Label Grid.Row="1"
+                                       TextColor="DodgerBlue"
+                                       Text="{Binding location.address}"/>
+                                <Label Grid.Column="1" 
+                                       Text="{Binding location.distance, StringFormat='{0} meters'}"/>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
