Add custotm switch

--- a/CheKhabar/ProfilePage.xaml
+++ b/CheKhabar/ProfilePage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:cs="clr-namespace:CheKhabar.View"
              x:Class="CheKhabar.ProfilePage">
         <StackLayout>
             <Entry x:Name="firstNameEntry" 
@@ -24,14 +24,28 @@
             <Entry x:Name="activeEntry" 
                    Placeholder="Active"
                    TextColor="{StaticResource blueColor}" />
-        <Entry x:Name="scoreEntry" 
-                   Placeholder="Score"
-                   TextColor="{StaticResource blueColor}" />
-        <Entry x:Name="visibleEntry" 
-                   Placeholder="Visible"
-                   TextColor="{StaticResource blueColor}" />
-        <Entry x:Name="distanceEntry" 
-                   Placeholder="Distance"
-                   TextColor="{StaticResource blueColor}" />
+            <Entry x:Name="scoreEntry" 
+                       Placeholder="Score"
+                       TextColor="{StaticResource blueColor}" />
+            <Entry x:Name="visibleEntry" 
+                       Placeholder="Visible"
+                       TextColor="{StaticResource blueColor}" />
+            <Entry x:Name="distanceEntry" 
+                           Placeholder="Distance"
+                           TextColor="{StaticResource blueColor}" />
+
+        <StackLayout Orientation="Horizontal">
+            <Label x:Name="userTypeLabel"
+                   Text="Common User" 
+                   FontSize="Large"/>
+
+            <cs:CustomSwitch x:Name="userTypeSwitch"
+                             SwitchOffColor="Navy"  
+                             SwitchOnColor="Green"  
+                             SwitchThumbColor="Violet"  
+                             HorizontalOptions="CenterAndExpand"  
+                             VerticalOptions="CenterAndExpand"
+                             PropertyChanged="userTypeSwitch_PropertyChanged"/>
+        </StackLayout>
     </StackLayout>
 </ContentPage>
